--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -12,10 +12,37 @@
   border-radius: 20px;
 }
 
-.list {
+.block_list {
   width: 93%;
   height: 600px;
   border: solid 4px;
   border-radius: 15px;
   overflow: scroll;
+  overflow-x: hidden;
+}
+
+.block_list::-webkit-scrollbar {
+  cursor: grab !important;
+}
+.block_list::-webkit-scrollbar-thumb {
+  cursor: grab !important;
+  background-color: rgb(0 0 0 / 50%);
+  border-radius: 10px;
+  border: 6px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+}
+
+.element_list {
+  width: 100%;
+  background: rgba(255, 255, 255, 0.35);
+  margin-bottom: 10px;
+  height: 120px;
+  border-radius: 20px;
+}
+
+.sort {
+  width: 100%;
+  height: 35px;
+  border-radius: 10px;
+  margin-bottom: 10px;
 }
